[gd_scene load_steps=13 format=3 uid="uid://cyhxpxju7s8c5"]

[ext_resource type="Script" path="res://game.gd" id="1_lr2lp"]
[ext_resource type="PackedScene" uid="uid://dnabq41y6n724" path="res://player.tscn" id="1_qsy5j"]
[ext_resource type="Script" path="res://FPS Counter.gd" id="3_mee67"]

[sub_resource type="Gradient" id="Gradient_tllpv"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.716475)
colors = PackedColorArray(0.67, 0.8185, 1, 1, 0.0561, 0.0561, 0.11, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fsmk6"]
gradient = SubResource("Gradient_tllpv")
fill_to = Vector2(0, 0.991453)

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_ksjhg"]
panorama = SubResource("GradientTexture2D_fsmk6")

[sub_resource type="Sky" id="Sky_4xdr7"]
sky_material = SubResource("PanoramaSkyMaterial_ksjhg")

[sub_resource type="Environment" id="Environment_6nwww"]
background_mode = 2
background_color = Color(0.282353, 0.282353, 0.282353, 1)
sky = SubResource("Sky_4xdr7")
tonemap_mode = 2

[sub_resource type="Gradient" id="Gradient_l4cyu"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dwy6r"]
gradient = SubResource("Gradient_l4cyu")
width = 6
height = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4tq6l"]
bg_color = Color(0.6, 0.14902, 0.14902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x8pxm"]
bg_color = Color(0.156863, 0.6, 0.27451, 1)

[node name="Game" type="Node3D"]
script = ExtResource("1_lr2lp")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6nwww")

[node name="Player" parent="." instance=ExtResource("1_qsy5j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="HUD" type="CanvasLayer" parent="."]
layer = 10

[node name="Crosshair" type="CenterContainer" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="HUD/Crosshair"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("GradientTexture2D_dwy6r")

[node name="FPS Counter" type="Label" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
script = ExtResource("3_mee67")

[node name="HealthContainer" type="MarginContainer" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 55
theme_override_constants/margin_right = 100

[node name="ProgressBar" type="ProgressBar" parent="HUD/HealthContainer"]
custom_minimum_size = Vector2(0, 24.063)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_4tq6l")
theme_override_styles/fill = SubResource("StyleBoxFlat_x8pxm")
value = 70.0
show_percentage = false

[node name="LoseMessage" type="Label" parent="HUD"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.188235, 0.188235, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 34
theme_override_font_sizes/font_size = 152
text = "You Lost :("
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinMessage" type="Label" parent="HUD"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.647059, 0.54902, 0.223529, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 34
theme_override_font_sizes/font_size = 152
text = "You Won!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SurviveTime" type="Label" parent="HUD"]
offset_left = 840.0
offset_top = 131.0
offset_right = 921.0
offset_bottom = 157.0
text = "Time Left: "

[node name="Menu" type="CanvasLayer" parent="."]
process_mode = 3
layer = 50

[node name="ColorRect" type="ColorRect" parent="Menu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.14902, 0.25098, 1)

[node name="Title" type="Label" parent="Menu"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -486.0
offset_top = 57.0
offset_right = 492.0
offset_bottom = 316.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 29
theme_override_font_sizes/font_size = 100
text = "Catapulter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.0
offset_top = -158.0
offset_right = 108.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="play" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 60
text = "Play"

[node name="quit" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 60
text = "Quit
"

[node name="Guide" type="Label" parent="Menu"]
offset_left = 1363.0
offset_top = 385.0
offset_right = 1627.0
offset_bottom = 803.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "How to play:

-Click first button on tower to spawn boulder
-Click second button to launch boulder
-Stop baddies from reaching the end

Remember to sprint
"
autowrap_mode = 3

[node name="Label2" type="Label" parent="Menu"]
offset_left = 227.0
offset_top = 500.0
offset_right = 491.0
offset_bottom = 547.0
grow_vertical = 2
theme_override_font_sizes/font_size = 31
text = "Mouse Sensitivity"
horizontal_alignment = 1

[node name="SensNum" type="Label" parent="Menu"]
offset_left = 144.0
offset_top = 561.0
offset_right = 525.0
offset_bottom = 608.0
theme_override_font_sizes/font_size = 31
text = "2.2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sens" type="HSlider" parent="Menu"]
offset_left = 136.0
offset_top = 621.0
offset_right = 529.0
offset_bottom = 637.0
max_value = 10.0
step = 0.1
value = 2.2

[node name="LevelSelect" type="Control" parent="Menu"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Menu/LevelSelect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0705882, 0.121569, 0.211765, 1)

[node name="GridContainer" type="GridContainer" parent="Menu/LevelSelect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 40
columns = 3

[node name="Label" type="Label" parent="Menu/LevelSelect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -153.0
offset_right = 156.0
offset_bottom = 232.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 82
text = "Level Select"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeathTimer" type="Timer" parent="."]
process_mode = 3

[node name="WinTimer" type="Timer" parent="."]
process_mode = 3

[connection signal="pressed" from="Menu/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="Menu/sens" to="." method="_on_sens_value_changed"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="WinTimer" to="." method="_on_win_timer_timeout"]
